Make the combobox in ContentSettingBubbleContents an actual combobox. ...instead of a menubutton that looks just like a combobox.

BUG=590850,571500

Review-Url: https://codereview.chromium.org/1977673002
Cr-Commit-Position: refs/heads/master@{#393625}

Former-commit-id: b4c886dba28f91e73e470a3737666501043f8cf2